GRAMATICA/GramaticaFinal.txt
programa -> funciones mainF

funciones -> funcion funciones
funciones -> ''

funcion -> tipo Id ( parametros ) bloque
parametros -> parametro parametros_rest 
parametros -> ''
parametros_rest -> , parametro parametros_rest 
parametros_rest -> ''
parametro -> tipo Id

mainF -> void main ( ) bloque
bloque -> { instrucciones }

instrucciones -> argumento instrucciones
instrucciones -> ''
argumento -> If
argumento -> While
argumento -> For
argumento -> Return
argumento -> Print

argumento -> tipo Id declaracion
argumento -> asignacion
asignacion -> Id = exp ;
declaracion -> = exp ;
declaracion -> ;

If -> if ( exp ) bloque Else
Else -> else bloque
Else-> ''
While -> while ( exp ) bloque
For -> for ( asignacion ; exp ; asignacion ) bloque

Return -> return exp2 ;
exp2 -> exp
exp2 -> ''
Print -> print ( exp ) ;

tipo -> int
tipo -> float
tipo -> bool
tipo -> string

exp -> E
E -> C Eo
Eo -> || C Eo 
Eo -> ''
C -> R Co
Co -> & R Co 
Co -> ''
R -> T Ro
Ro -> = T Ro 
Ro -> < T Ro
Ro -> > T Ro
Ro -> <= T Ro 
Ro -> >= T Ro
Ro -> == T Ro
Ro -> != T Ro
Ro -> ''
T -> F To
To -> + F To 
To -> - F To 
To -> ''
F -> A Fo
Fo -> * A Fo 
Fo -> / A Fo 
Fo -> % A Fo 
Fo -> ''
A -> ( L ) 
A -> id B
A -> num
A -> true 
A -> false

L -> E Lo
Lo -> , E Lo 
Lo -> ''
L -> ''
B -> ( L ) 
B -> ''

Id -> id
